# cicd-audit-framework

./: .gitignore  GITHUB-SETUP-GUIDE.md  README.md  WORKFLOW-GUIDE.md  pyproject.toml  report-after.html  report-before.html  run_tests.py
.github/workflows/: audit.yml
cicd_auditor/: __init__.py  auditor.py  cli.py  models.py
cicd_auditor/checks/: __init__.py  action_versions.py  base.py  branch_protection.py  permissions.py  secrets.py  test_gates.py  timeouts.py
cicd_auditor/reporter/: __init__.py  html_reporter.py
cicd_auditor/reporter/templates/: report.html.j2
samples/after/: ci.yml
samples/before/.github/workflows/: ci.yml
tests/: conftest.py  test_action_versions.py  test_auditor_integration.py  test_other_checks.py  test_secrets.py
